--- a/Projects/Email_spam_classification/Email_spam_classification.ipynb
+++ b/Projects/Email_spam_classification/Email_spam_classification.ipynb
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"spam_ham_dataset.csv\")\n",
+    "data = pd.read_csv(\"Email_spam_ham_dataset.csv\")\n",
     "print(data.shape)\n",
     "data.head()"
    ]
